--- a/EmptySite/index.html
+++ b/EmptySite/index.html
@@ -90,7 +90,7 @@
 					<ul>
 					    <li><a href="elements.html">Home</a></li>
 						<li><a href="generic.html">Rapport</a></li>
-						<li><a href="index.html">Uitloggen</a></li>
+						<li><a href="index.html">Saartje</a></li>
 					</ul>
 				</nav>
 			</header>
