Communicatie analoge waarden

--- a/EmptySite/elements.html
+++ b/EmptySite/elements.html
@@ -26,7 +26,7 @@
 					<ul>
 						<li><a href="elements.html">Home</a></li>
 						<li><a href="generic.html">Rapport</a></li>
-                        <li><a href="index.html">Inloggen</a></li>
+                        <li><a href="index.cshtml">Inloggen</a></li>
 					</ul>
 				</nav>
 			</header>
